[package]
name = "rocketdustry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[toolchain]
channel = "nightly"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
image = "0.24.7"
ordered-float = "4.1.1"
rand = "0.8.5"
umath = "0.0.7"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
